# EquilibriumMaxxing

./: .gitmodules  README.md
Quartus/EquilibriumMaxxing/: .gitignore  EquilibriumMaxxing-SextaFeira_Final.qar  EquilibriumMaxxing.qar  EquilibriumMaxxing.qsf  compile_list.txt  compile_tb.sh  equilibrium_maxxing.v  equilibrium_maxxing_fd.v  equilibrium_maxxing_tb.v  equilibrium_maxxing_top_tb.v  equilibrium_maxxing_uc.v  files.txt  tb.out
Quartus/EquilibriumMaxxing/EquilibriumMaxxing_restored/: EquilibriumMaxxing.qpf  EquilibriumMaxxing.qsf  equilibrium_maxxing.v  equilibrium_maxxing_fd.v  equilibrium_maxxing_uc.v  qar_info.json  rom_gravidade_30cm_pf4bits.hex
Quartus/EquilibriumMaxxing/GameComponents/: comparador_jogo.v  contador_m_invertible.v  contador_m_pontos.v  contador_m_redux_invertible.v  contador_m_redux_invertible_tb.v  decoder_11.v  jogo_controller.v  led_color_fader.v  led_color_fader_tb.v  led_color_mixxer.v  led_color_mixxer_tb.v  level_register.v  random_led_controller.v  random_led_controller_fd.v  random_led_controller_tb.v  random_led_controller_uc.v  random_number.v
Quartus/EquilibriumMaxxing/LED_WS2811/: WS2811_array_controller.v  WS2811_array_controller_fd.v  WS2811_array_controller_tb.v  WS2811_array_controller_uc.v  WS2811_rgb_wave_provider_tb.v  WS2811_serial.v  WS2811_serial_fd.v  WS2811_serial_tb.v  WS2811_serial_uc.v
Quartus/EquilibriumMaxxing/ReceptorSerial/: rx_serial_8N1_fd.v  serial2alavanca.v
Quartus/EquilibriumMaxxing/Simulator/: gravity_rom.v  (+5 more)
SimpleADC_UART/: .gitignore  CMakeLists.txt  main.c
Utility/: genGravityRom.c
(+21 files in other folders)
